Move index.js to lib/index.js for enyojs

--- a/js/package.json.template
+++ b/js/package.json.template
@@ -1,7 +1,7 @@
 {
     "name": "ilib",
     "version": "@fullversion@",
-    "main": "index.js",
+    "main": "lib/index.js",
     "description": "iLib is a cross-engine library of internationalization (i18n) classes written in pure JS",
     "keywords": [
         "internationalization", 
