Add ilib-web.js to uglify task list and minor update

--- a/js/build.xml
+++ b/js/build.xml
@@ -346,6 +346,7 @@ limitations under the License.
                 <include name="ilib-qt*"/>
                 <include name="ilib-webpack*"/>
                 <include name="ilib-unpack.js"/>
+                <include name="ilib-web.js"/>
             </fileset>
             <fileset dir="${build.base}">
                 <include name="index.js"/>
