--- a/qt/build.xml
+++ b/qt/build.xml
@@ -67,6 +67,7 @@ limitations under the License.
 		<delete dir="${build.filereader}/imports"/>
 		<delete dir="${build.output}"/>
 		<delete dir="${build.export}/qt"/>
+        <delete file="${build.filereader}/.qmake.stash"/>
         <delete>
             <fileset dir="${build.unittest}">
                 <include name="*.qmlc"/>
