--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
         "grunt-contrib-compress": "^1.4.3",
         "grunt-contrib-copy": "^1.0.0",
         "grunt-contrib-nodeunit": "~0.4.1",
-        "grunt-contrib-uglify": "~0.5.0",
+        "grunt-contrib-uglify": "^3.4.0",
         "grunt-eslint": "^21.0.0",
         "grunt-http-server": "^2.1.0",
         "grunt-jsdoc": "^2.2.1",
@@ -75,7 +75,7 @@
         "http-server": "^0.11.1",
         "ilib-scanner": "^1.2.2",
         "ilib-webpack-loader": "^1.2.2",
-        "ilib-webpack-plugin": "^1.2.2",
+        "ilib-webpack-plugin": "^1.3.0",
         "iso-15924": "^2.1.0",
         "jsdoc2": "^2.4.0",
         "nodeunit": "^0.11.0",
@@ -84,7 +84,8 @@
         "trireme": "^0.9.3",
         "uglify-js": "^3.4.9",
         "uglifyjs-webpack-plugin": "^1.3.0",
-        "webpack": "^3.12.0",
+        "webpack": "^4.32.2",
+        "webpack-cli": "^3.3.2",
         "xml2json": "^0.11.2"
     },
     "scripts": {
