Try fixing the travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,28 +4,29 @@ node_js:
   - "8"
   - "9"
   - "10"
+  - "11"
 env:
   - CXX=g++-4.8
 before_install:
   # Qt
-  - sudo apt-add-repository --yes ppa:beineri/opt-qt551-trusty
-  - sudo apt-get update -qq
-  - export TZ=America/Los_Angeles
+  #- sudo apt-add-repository --yes ppa:beineri/opt-qt551-trusty
+  #- sudo apt-get update -qq
 install:
   # Qt
-  - sudo apt-get -y install qt55[QTPACKAGE]
-  - sudo apt-get -y install qmlscene qt5-default qtdeclarative5-dev qtbase5-dev
+  #- sudo apt-get -y install qt55[QTPACKAGE]
+  #- sudo apt-get -y install qmlscene qt5-default qtdeclarative5-dev qtbase5-dev
   - rm -rf node_modules
   - npm install
   - export PATH=$PWD/node_modules/.bin:$PATH
   - export NODE_OPTIONS="--max-old-space-size=3072"
+  - export TZ=America/Los_Angeles
 script:
   # [Error] module QtQuick is not installed
-  - source /opt/qt55/bin/qt55-env.sh
+  #- source /opt/qt55/bin/qt55-env.sh
   # [Error] [exec] QXcbConnection: Could not connect to display
-  - export QT_QPA_PLATFORM=offscreen
+  #- export QT_QPA_PLATFORM=offscreen
   # [Error] QFontDatabase: Cannot find font directory /usr/lib/x86_64-linux-gnu/fonts - is Qt installed correctly?
-  - sudo ln -s /usr/share/fonts /usr/lib/x86_64-linux-gnu/fonts
+  #- sudo ln -s /usr/share/fonts /usr/lib/x86_64-linux-gnu/fonts
 
   # iLib full build / Run nodeunit tests
   - ant clean test
