Updated package.json.template and build.xml in order to include LICENSE file for releasing

--- a/build.xml
+++ b/build.xml
@@ -75,6 +75,7 @@ limitations under the License.
 		<mkdir dir="${build.export}" description="Dir to contain all the exported outputs"/>
 		<iterate target="export"/>
 		<copy file="README.md" todir="${build.export}/package" />
+		<copy file="LICENSE" todir="${build.export}/package" />
 		<zip destfile="${build.dist}/ilib-${version}.zip"
 			basedir="${build.export}"
 			includes="js/**,java/**,locale/**,qt/**"/>
