--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "files": [
         "js/lib",
         "js/locale",
-        "js/README.md"
+        "README.md",
+        "LICENSE"
     ],
     "repository": {
         "type": "git",
